[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/hombre/boca/boca1.png" type="Texture" id=1]
[ext_resource path="res://assets/hombre/nariz/nariz1.png" type="Texture" id=2]
[ext_resource path="res://assets/hombre/ojos/ojos1.png" type="Texture" id=3]
[ext_resource path="res://assets/hombre/pelo/pelo2.png" type="Texture" id=4]
[ext_resource path="res://assets/hombre/cara/cara1.png" type="Texture" id=5]
[ext_resource path="res://Face.gd" type="Script" id=6]
[ext_resource path="res://fsemeric_100.tres" type="DynamicFont" id=7]
[ext_resource path="res://assets/question_mark.png" type="Texture" id=8]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 111, 100 )

[node name="Face" type="Node2D"]
script = ExtResource( 6 )

[node name="Cara" type="Sprite" parent="."]
position = Vector2( 128, 128 )
texture = ExtResource( 5 )

[node name="Boca" type="Sprite" parent="."]
position = Vector2( 128, 128 )
texture = ExtResource( 1 )

[node name="Nariz" type="Sprite" parent="."]
position = Vector2( 128, 128 )
texture = ExtResource( 2 )

[node name="Ojos" type="Sprite" parent="."]
position = Vector2( 128, 128 )
texture = ExtResource( 3 )

[node name="Pelo" type="Sprite" parent="."]
position = Vector2( 128, 128 )
texture = ExtResource( 4 )

[node name="Incognito" type="Sprite" parent="."]
visible = false
position = Vector2( 129, 132 )
texture = ExtResource( 8 )

[node name="Data" type="Control" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0

[node name="DataTRect" type="ColorRect" parent="Data"]
self_modulate = Color( 0, 0, 0, 0.670588 )
margin_left = 111.0
margin_top = -99.0
margin_right = 472.0
margin_bottom = 207.0

[node name="DataLabel" type="Label" parent="Data"]
margin_left = 142.0
margin_top = -93.0
margin_right = 1240.0
margin_bottom = 114.0
rect_scale = Vector2( 0.244117, 0.261862 )
custom_fonts/font = ExtResource( 7 )
text = "PRUEBA"
align = 1
autowrap = true
uppercase = true

[node name="TextureRect" type="TextureRect" parent="."]
margin_left = 20.0
margin_top = 15.0
margin_right = 271.0
margin_bottom = 261.0
rect_scale = Vector2( 0.923742, 0.840814 )

[node name="Area" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area"]
position = Vector2( 130, 123 )
shape = SubResource( 1 )

[connection signal="gui_input" from="TextureRect" to="." method="_on_TextureRect_gui_input"]
[connection signal="mouse_entered" from="TextureRect" to="." method="_on_TextureRect_mouse_entered"]
[connection signal="mouse_exited" from="TextureRect" to="." method="_on_TextureRect_mouse_exited"]
[connection signal="area_entered" from="Area" to="." method="_on_Area_area_entered"]
[connection signal="area_exited" from="Area" to="." method="_on_Area_area_exited"]
